# idkgameengine

./: Cargo.toml
res/shaders/: fragment.glsl  vertex.glsl
src/: main.rs  resource_manager.rs
src/components/: draw.rs  light.rs  mesh.rs  mod.rs  render.rs  transform.rs
src/internal/shaders/: fragment.glsl  vertex.glsl
src/render/: mesh.rs  mesh_manager.rs  mod.rs  ogl_renderer.rs  renderer.rs  shader_manager.rs
src/resources/: camera.rs  input.rs  mod.rs  time.rs
src/shaders/: fragment.glsl  vertex.glsl
src/shaders/internal/: fragment.glsl  vertex.glsl
src/systems/: camera_system.rs  close_system.rs  mod.rs  spin_system.rs
