[package]
name = "rust_ogl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brood = { version = "0.9.1", features = ["rayon"] }
glam = "0.27.0"
glium = "0.34.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
image = "0.25.1"
jumprope = "1.1.2"
winit = { version = "0.29.15", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
raw-window-handle = "0.5.2"