[package]
name = "idkgameengine"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brood = { version = "0.9.1", features = ["rayon"] }
glam = { version = "0.27.0", features = ["core-simd", "fast-math"] }
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
glutin = "0.31.3"
image = { version = "0.25.1", default-features = false, features = ["rayon", "jpeg"] }
winit = { version = "0.30.0", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita", "rwh_05"] }
raw-window-handle = "0.5.2"
bitvec = "1.0.1"
easy-gltf = "1.1.2"
simple_moving_average = "1.0.2"

[profile.release]
lto = true
panic = "abort"
